Change directory naming scheme

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 # dependencies
 /node_modules
 /backend_express/node_modules
+/server/node_modules
 /frontend_react/node_modules
+/client/node_modules
 /.pnp
 .pnp.js
 
@@ -13,6 +15,7 @@
 # production
 /build
 /frontend_react/build
+/client/build
 
 # misc
 .DS_Store
