--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "heroku_deploy",
   "version": "1.0.0",
   "description": "",
-  "main": "server/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
     "build": "cd client && npm install && npm run build"
