--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
-    "build": "cd client && npm install && npm run build"
+    "build": "cd client && npm install && npm run build",
+    "build-dev": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
