--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "sass": "^1.54.4",
     "xhr2": "^0.2.1"
   },
   "engines": {
