--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
+    "start-dev": "nodemon server/index.js",
     "build": "cd client && npm install && npm run build",
     "build-dev": "cd client && npm run build"
   },
@@ -15,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "nodemon": "^2.0.19",
     "sass": "^1.54.4",
     "xhr2": "^0.2.1"
   },
