--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ubiweather-webapp",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
@@ -9,7 +8,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19",
+    "sass": "^1.54.4",
+    "xhr2": "^0.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
