--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "heroku_deploy",
+  "name": "vercel_deploy",
   "version": "1.0.0",
   "description": "",
   "main": "server/index.js",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
-    "start": "node server/index.js",
-    "start-dev": "nodemon server/index.js",
-    "build": "npm install && cd client && npm install && npm run build",
-    "build-dev": "cd client && npm run build"
+    "start": "cd client && npm run build && nodemon ../server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +17,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
-    "sass": "^1.54.4",
+    "path": "^0.12.7",
     "xhr2": "^0.2.1"
-  },
-  "engines": {
-    "node": "16.3.0"
   }
 }
